fixed home page category titles overflowing

--- a/less/home.less
+++ b/less/home.less
@@ -1,5 +1,6 @@
 .home {
 	h4 {
+		width: 100%;
 		font-weight: 700;
 		line-height: 21px;
 		text-align: left;
